--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ a {
 	text-decoration: none;
 }
 
-p, li, h3 {
+p, li, h3, h2 {
 	text-align: left;
 	padding: 0 20px;
 }
@@ -34,7 +34,7 @@ header {
 
 main {
 	background-color: #161616;
-	margin: 160px 15% 70px 15%;
+	margin: 160px 100px 70px 100px;
 }
 
 footer {
@@ -54,6 +54,41 @@ footer > p {
 	position: relative;
 	padding: 0 2%;
 	margin: 0 0.5%;
+}
+
+#mainNav li > #currentPage {
+	color: #FF8C00;
+	pointer-events: none;
+}
+
+#ddNav {
+	display: none;
+}
+
+.dropDownBtn {
+	border: none;
+	margin: 0;
+}
+
+.dropDown {
+	position: relative;
+	display: inline-block;
+}
+
+.dropDown:hover .dropDownContent {
+	display: block;
+}
+
+.dropDownContent {
+	background-color: #232323;
+	display: none;
+	position: absolute;
+	min-width: 160px;
+	z-index: 6;
+}
+
+.dropDownContent a{
+	display: block;
 }
 
 .sec {
@@ -98,7 +133,6 @@ footer > p {
 .ssContainer > div >  video, .ssContainer > div > img {
 	min-width: 300px;
 	height: 565px;
-	
 }
 
 .button{
@@ -109,7 +143,7 @@ footer > p {
 	cursor: pointer;
 	font-size: 18px;
 	font-weight: bold;
-	transition: 0.6s ease;
+	transition: 0.8s ease;
 	user-select: none;
 	padding: .5em;
 	border: 2px solid rgba(0, 0, 0, 0);
@@ -117,7 +151,7 @@ footer > p {
 
 .button:hover{
 	color: #FF8C00;
-	background-color: rgba(22, 22, 22, 0.5);
+	background-color: #ddd;
 	border: 2px solid #FFFFFF;
 }
 
@@ -143,8 +177,8 @@ footer > p {
 	position: fixed;
 	bottom: 80%;
 	right: 1%;
-	width: 5%;
-	height: 5%;
+	width: 80px;
+	height: 50px;
 	padding-top: 12px;
 	z-index: 10;
 }
