--- a/styles.css
+++ b/styles.css
@@ -99,44 +99,38 @@ footer>p{
 	outline-style:solid;
 	outline-color:#FFFFFF;
 	outline-width:1px;
-	min-width:310px;
+	min-width:500px;
 	overflow:hidden;
 }
 
 .flexContainer{
 	display:flex;
 	flex-wrap:wrap;
+	flex:1;
 }
 
-.flexContainer>div{
+.flexContainer>.col{
+	flex:1;
+	width:max-content;
+	min-width:500px;
 	max-width:100%;
 	margin:0;
 }
 
-.flexContainer>.evenCol{
-	flex:1;
-	width:max-content;
-	min-width:300px;
-	margin:0;
-}	
-
-.flexContainer>.col{
-	width:min-content;
-	min-width:300px;
-}
-
 .ssContainer{
-	flex:2 1 auto;
-	width:max-content;
-	position:relative;
 	display:none;
+	width: 100%;
+    padding-top: 56.25%;
+    height: 0px;
+    position: relative;
 }
 
-.ssContainer>div>video,.ssContainer>div>iframe,.ssContainer>div>img{
-	min-height:300px;
-	min-width:300px;
-	width:100%;
-	height:50vh;
+.ssMedia>video,.ssMedia>iframe,.ssMedia>img{
+	width: 100%;
+    height: 100%;
+    position: absolute;
+	top: 0;
+    left: 0;
 	border-width:0px;
 }
 
@@ -167,6 +161,7 @@ footer>p{
 	padding:1.5%;
 	margin-top:-22px;
 	font-size:24px;
+	color:#FF8C00;
 }
 
 .prev{
@@ -182,9 +177,9 @@ footer>p{
 	display:none;
 	position:fixed;
 	bottom:93%;
-	right:1%;
-	width:4%;
-	height:4.5%;
+	right:3%;
+	width:80px;
+	height:50px;
 	z-index:10;
 }
 
@@ -210,4 +205,7 @@ footer>p{
 	display:none;
 	border-top:2px solid #FF8C00;
 	padding-top:.5em;
+}
+.showMoreBtn, .cv{
+	padding-bottom:1em;
 }
